# cryptoto

./: .gitignore  README.md  asset.py  efficient_frontier.ipynb  historical_pricing_data.csv  indicators.py  main.ipynb  main.py  portfolio.py  pyproject.toml  requirements.txt  tickers.py
archive/: get_one_year_historical_data.py  max_sharpe_allocation.csv
data/experiments/: asset_strategies_1_year_no_tpsl.csv  asset_strategies_1_year_no_tpsl_new_exit_conditions.csv  asset_strategies_1_year_with_tpsl.csv  asset_strategies_1_year_with_tpsl_new_exit_conditions.csv  asset_strategies_2_months_no_tpsl.csv  asset_strategies_2_months_no_tpsl_new_exit_conditions.csv  asset_strategies_2_months_with_tpsl.csv  asset_strategies_2_months_with_tpsl_new_exit_conditions.csv
data/misc/: daily_portfolio_value.csv  daily_portfolio_value_exp.csv  daily_portfolio_value_no_TP_SL.csv  daily_portfolio_value_validation.csv  example_backtesting.csv  trade_log.csv  trade_log_exp.csv  trade_log_no_TP_SL.csv  (+1 more)
notebooks/: autotrade.ipynb  autotrade_mechanism.ipynb  backtest.ipynb  backtesting.ipynb  backtesting_single.ipynb  clairvoyance.ipynb  efficient_frontier.ipynb  joshua_effecient_frontier.ipynb  jw_backtest_test.ipynb  jw_backtesting copy.ipynb  jw_backtesting.ipynb  jw_backtesting_single.ipynb  jw_backtesting_xgb.ipynb  jw_effecient_frontier.ipynb  jw_efficient_frontier.ipynb  jw_lstm.ipynb  jw_metrics.ipynb  jw_xgb.ipynb  lstm.ipynb  metrics.ipynb  shae_timeseries.ipynb  time_series.ipynb  timeseries.ipynb  tong_strategies.ipynb  valerie_backtesting.ipynb  valerie_strategies.ipynb  xgb.ipynb  xgb_backtesting.ipynb
src/: main.ipynb  streamlit_app.py  timeseries.ipynb
unsorted/: backtest_archive.ipynb  main.py  portfolio.py
(+69 files in other folders)
