[project]
name = "cryptoto"
version = "0.1.0"
description = ""
authors = [
    {name = "Shae-Anne"},
    {name = "Tong"},
    {name = "Jing Wen"},
    {name = "Joshua"},
    {name = "Valerie"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel",
    "ipython",
    "matplotlib",
    "matplotlib-inline",
    "numpy (==1.26.4)",
    "pandas",
    "pendulum",
    "pillow",
    "platformdirs",
    "plotly",
    "polars",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn",
    "six",
    "tessa",
    "tqdm",
    "urllib3",
    "yfinance",
    "pandas_ta",
    "lxml",
    "pyportfolioopt (>=1.5.6,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "backtesting (>=0.6.3,<0.7.0)",
]

[tool.poetry]
packages = [{include = "cryptoto", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
